# snappy_sc

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: publish.yml
src/: lib.rs
src/windows/: info.rs  mod.rs
