[package]
name = "snappy_sc"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A minimal crate to take screenshots created for Snappy"
repository = "https://github.com/dfaisalmahmood/snappy_sc"
keywords = ["screenshot", "screen-capture", "graphics"]
readme = "README.md"
exclude = ["bin/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "test_app"
# path = "bin/test_app.rs"

[dependencies]
image = "0.23"
webp = "0.2.2"
rayon = "1.7.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "windef", "wingdi", "winuser"]}

[target.'cfg(macos)'.dependencies]
metal = "0.24.0"